# BongardGenerator

./: BongardGenerator.cpp  BongardGenerator.hpp  BongardPicture.cpp  BongardPicture.hpp  CMakeLists.txt  Configurations.hpp  Main.cpp  README.md
